# Array_Sorter_Task

./: .gitignore  CMakeLists.txt  README.md
input/: input.txt
src/: arraybase.h  arraytransformer.h  commandlineparser.cpp  commandlineparser.h  fileparser.h  intersectarray.h  main.cpp  sort.h  sortedarray.h  uniquerevarray.h  utility.h
tests/: test_args.bat  test_general.bat  test_print.bat
tests/expected_output/: expected_help.txt
